# writing_an_interpreter_in_rust

./: Cargo.toml  README.md  build_wasm.sh
src/: ast.rs  builtins.rs  environment.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  repl.rs  token.rs  wasm.rs
tests/: README.md  evaluator_test.rs  lexer_test.rs  object_test.rs  parser_test.rs
