[package]
name = "writing_an_interpreter_in_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.1"
js-sys="0.3.77"
web-sys = "0.3.70"            

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]